--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
     "ini"
   ],
   "author": "zede",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^22.4.3",
+    "ts-jest": "^22.4.2",
+    "typescript": "^2.8.1"
+  }
 }
