--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "zede",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^22.2.2",
     "jest": "^22.4.3",
     "ts-jest": "^22.4.2",
     "tslint": "^5.9.1",
