--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-ini",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "parsing and serialize ini files",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -18,7 +18,8 @@
     "build": "tsc"
   },
   "keywords": [
-    "ini"
+    "ini",
+    "parse"
   ],
   "author": "Chernov Denis <zede@ventumit.ru>",
   "license": "MIT",
@@ -39,7 +40,9 @@
     "transform": {
       "^.+\\.(ts|tsx)$": "ts-jest"
     },
-    "testMatch": ["**/test/*.+(ts|tsx|js)"],
+    "testMatch": [
+      "**/test/*.+(ts|tsx|js)"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
