--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "ts-jest": "^22.4.2",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.8.0",
-    "typescript": "^2.8.1"
+    "typescript": "3.4.3"
   },
   "jest": {
     "globals": {
