--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "lint": "eslint --cache --ext .ts src test",
     "build": "tsc"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint & npm run test"
+    }
+  },
   "keywords": [
     "ini",
     "parse"
@@ -29,6 +34,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^7.2.0",
     "eslint-plugin-import": "^2.20.2",
+    "husky": "^4.2.3",
     "jest": "^22.4.3",
     "ts-jest": "^22.4.2",
     "typescript": "3.4.3"
