--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-ini",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "description": "parsing and serialize ini files",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -15,7 +15,8 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint --cache --ext .ts src test",
-    "build": "tsc"
+    "build": "tsc",
+    "publish": "npm run lint && npm run test && npm run build && npm publish"
   },
   "husky": {
     "hooks": {
