--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-ini",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "parsing and serialize ini files",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -31,6 +31,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^22.2.2",
+    "@types/node": "^16.10.2",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^7.2.0",
@@ -50,7 +51,7 @@
       "^.+\\.(ts|tsx)$": "ts-jest"
     },
     "testMatch": [
-      "**/test/**/*.+(ts|tsx|js)"
+      "**/test/**/*test.+(ts|tsx|js)"
     ],
     "moduleFileExtensions": [
       "ts",
