--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,10 @@
 {
   "extends": "./tsconfig.json",
-  "files": ["src/index.ts", "test/tests.ts"]
+  "files": [
+    "src/index.ts",
+    "src/tools/read-ini.ts",
+    "src/tools/write-ini.ts",
+    "test/test.ts",
+    "test/tools.test.ts"
+  ]
 }
