bugs field was updated

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git+https://github.com/Sdju/js-ini.git"
   },
   "bugs": {
-    "email": "zede@ventumit.ru",
+    "email": "zede@mail.ru",
     "src": "https://github.com/Sdju/js-ini/issues"
   },
   "scripts": {
