--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "src": "https://github.com/Sdju/js-ini/issues"
   },
   "scripts": {
-    "test": "jest",
+    "test": "vitest run",
+    "test-watch": "vitest",
     "lint": "eslint --cache --ext .ts src test",
     "build": "tsc",
     "publish": "npm run lint && npm run test && npm run build && npm publish"
@@ -30,36 +31,14 @@
   "author": "Denis Chernov<zede1697@mail.ru>",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^22.2.2",
     "@types/node": "^16.10.2",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^7.2.0",
     "eslint-plugin-import": "^2.20.2",
     "husky": "^4.2.3",
-    "jest": "^22.4.3",
-    "ts-jest": "^22.4.2",
-    "typescript": "^4.1.3"
-  },
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "tsConfigFile": "./tsconfig.json"
-      }
-    },
-    "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
-    },
-    "testMatch": [
-      "**/test/**/*test.+(ts|tsx|js)"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
+    "vite": "^4.1.1",
+    "vitest": "^0.28.4",
+    "typescript": "^4.9.5"
   }
 }
