--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-ini",
-  "version": "1.5.1",
+  "version": "1.6.0-rc1",
   "description": "parsing and serialize ini files",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -31,14 +31,14 @@
   "author": "Denis Chernov<zede1697@mail.ru>",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^16.10.2",
+    "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^7.2.0",
     "eslint-plugin-import": "^2.20.2",
     "husky": "^4.2.3",
+    "typescript": "^4.9.5",
     "vite": "^4.1.1",
-    "vitest": "^0.28.4",
-    "typescript": "^4.9.5"
+    "vitest": "^0.28.4"
   }
 }
