--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-ini",
-  "version": "1.6.0-rc1",
+  "version": "1.6.0",
   "description": "parsing and serialize ini files",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
